# crispy-tivi

./: .editorconfig  .gitignore  .gitmodules  .impeccable.md  .riceguard.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CrispyTivi.sln  Directory.Packages.props  GEMINI.md  LICENSE  Makefile  PROJECT_INDEX.md  README.md  SECURITY.md  analysis_options.yaml  analyze_res.txt  audit_report.json  build.gradle.kts  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  gradle.properties  lefthook.yml  nuget.config  pp.xml  pubspec.yaml  repomix-output.xml  settings.gradle.kts
rust/: Cargo.toml  compile_error.txt
rust/.cargo/: config.toml
rust/.sqry/analysis/: adjacency.csr  cond_calls.dag  cond_imports.dag  cond_inherits.dag  cond_references.dag  scc_calls.scc  scc_imports.scc  scc_inherits.scc  scc_references.scc
rust/.sqry/graph/: manifest.json
rust/crates/crispy-catchup/: Cargo.toml
rust/crates/crispy-catchup/src/: error.rs  lib.rs  mode.rs  provider.rs  template.rs
rust/crates/crispy-core/: Cargo.toml  errors.json  errors2.json
rust/crates/crispy-core/proptest-regressions/algorithms/: channel_dedup.txt  content_dedup.txt  title_normalize.txt
rust/crates/crispy-core/src/: .codesearchignore  backup.rs  errors.rs  events.rs  gpu.rs  http_client.rs  http_resilience.rs  lib.rs  profiling.rs  sync_progress.rs
rust/crates/crispy-core/src/algorithms/: catchup.rs  categories.rs  channel_dedup.rs  config_merge.rs  content_dedup.rs  crypto.rs  dedup.rs  dvr.rs  epg_fuzzy.rs  epg_matching.rs  epg_merge.rs  group_icon.rs  json_utils.rs  merge_decisions.rs  mod.rs  normalize.rs  permission.rs  pin.rs  quality_ranking.rs  search.rs  search_grouping.rs  sorting.rs  source_filter.rs  stream_alternatives.rs  stream_failover.rs  timezone.rs  title_normalize.rs  url_normalize.rs  watch_history.rs  watch_progress.rs
rust/crates/crispy-core/src/database/: migration_runner.rs  mod.rs  retry_queue.rs  row_helpers.rs  upsert.rs  value_object_adapters.rs
rust/crates/crispy-core/src/i18n/: ar.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  mod.rs
rust/crates/crispy-core/src/models/: columns.rs  content_rating.rs  conversions.rs  mod.rs  stream_quality.rs
rust/crates/crispy-core/src/parsers/: bif.rs  epg.rs  m3u.rs  mod.rs  s3.rs  stalker.rs  vod.rs  vtt.rs  xtream.rs
rust/crates/crispy-core/src/services/: activity_log.rs  airplay_service.rs  app_metadata.rs  app_update.rs  audio_output.rs  backup_service.rs  bookmarks.rs  buffer_tiers.rs  bulk.rs  cast_service.rs  categories.rs  channels.rs  circuit_breaker.rs  cleanup.rs  content_filter.rs  crash_recovery.rs  deep_link_router.rs  device_discovery.rs  diagnostics.rs  display_manager.rs  dlna_service.rs  dvr.rs  epg.rs  epg_bulk_fetch.rs  epg_cache.rs  epg_facade.rs  epg_fetcher.rs  epg_hot_cache.rs  epg_mappings.rs  epg_resolver.rs  epg_sync.rs  feature_flags.rs  gdpr_service.rs  help_service.rs  history.rs  i18n_service.rs  (+36 more)
rust/crates/crispy-core/tests/: db_integration.rs
rust/crates/crispy-ffi/: Cargo.toml
rust/crates/crispy-ffi/src/: api.rs  display_impl.rs  frb_generated.rs  lib.rs
rust/crates/crispy-iptv-tools/: Cargo.toml
rust/crates/crispy-iptv-tools/src/: dedup.rs  error.rs  filter.rs  lib.rs  manipulate.rs  merge.rs  normalize.rs  resolution.rs  sanitize.rs  sort.rs  template.rs  udpxy.rs  unify.rs
rust/crates/crispy-iptv-types/: Cargo.toml
rust/crates/crispy-iptv-types/src/: channel.rs  epg.rs  error.rs  lib.rs  resolution.rs  stream.rs  vod.rs
rust/crates/crispy-m3u/: Cargo.toml
rust/crates/crispy-m3u/src/: error.rs  id.rs  lib.rs  parser.rs  types.rs  writer.rs
rust/crates/crispy-media-probe/: Cargo.toml
rust/crates/crispy-media-probe/src/: bitrate.rs  error.rs  hls.rs  lib.rs  mismatch.rs  mpv_ffi.rs  mpv_probe.rs  mpv_screenshot.rs  probe.rs  screenshot.rs  types.rs
rust/crates/crispy-player/: Cargo.toml  build.rs
rust/crates/crispy-player/src/: backend.rs  caption_formats.rs  channel_prebuffer.rs  gstreamer_backend.rs  lib.rs  mpv_backend.rs  video_underlay.rs
rust/crates/crispy-server/: Cargo.toml
rust/crates/crispy-server/src/: config.rs  lib.rs  main.rs  ws_handler.rs  ws_protocol.rs
rust/crates/crispy-server/tests/: handler_tests.rs
rust/crates/crispy-stalker/: Cargo.toml
rust/crates/crispy-stalker/src/: backoff.rs  client.rs  device.rs  discovery.rs  error.rs  lib.rs  session.rs  types.rs  url.rs
rust/crates/crispy-stalker/tests/: integration_test.rs
rust/crates/crispy-stream-checker/: Cargo.toml
rust/crates/crispy-stream-checker/src/: backoff.rs  checker.rs  checkpoint.rs  csv.rs  dedup.rs  error.rs  lib.rs  normalize.rs  proxy.rs  status.rs  types.rs
rust/crates/crispy-stream-checker/tests/: checker_test.rs
rust/crates/crispy-ui/: Cargo.toml  gpu_hints.def
rust/crates/crispy-ui/locales/: ar.toml  de.toml  en.toml  es.toml  fr.toml
rust/crates/crispy-ui/src/: app.rs  cache.rs  color_buttons.rs  data.rs  data_engine.rs  event_bridge.rs  events.rs  hdmi_cec.rs  i18n.rs  image_cache.rs  image_loader.rs  layout.rs  main.rs  provider.rs  remote_provider.rs  scroll_controller.rs  scroll_integration.rs  sync.rs  sync_task.rs  ui_tests.rs  wasm_entry.rs  windowed_model.rs
rust/crates/crispy-ui/tests/: screenshot_tests.rs  screenshots.rs
rust/crates/crispy-ui/ui/: main.slint
rust/crates/crispy-xmltv/: Cargo.toml
rust/crates/crispy-xmltv/src/: episode.rs  parser.rs
rust/crates/crispy-xtream/: Cargo.toml
rust/crates/crispy-xtream/src/: types.rs  url.rs
rust/crates/slint-crispy-vscroll/: Cargo.toml  LICENSE.md  build.rs
rust/crates/slint-crispy-vscroll/benches/: layout_compute.rs  physics_tick.rs  scroll_bench.rs  slot_recycle.rs
rust/crates/slint-crispy-vscroll/examples/: apple_tv_parallax.rs  grid_epg.rs  horizontal_carousel.rs  nested_scroll.rs
rust/crates/slint-crispy-vscroll/src/: lib.rs
rust/crates/slint-crispy-vscroll/ui/: scroll-primitives.slint  virtual-scroll-base.slint
rust/tests/: integration_db.rs  smoke_core.rs  smoke_server.rs
rust/tests/fixtures/sources/: epg_sample.xml  sample.m3u  xtream_live_categories.json  xtream_live_streams.json
(+2854 files in other folders)
