[workspace]
resolver = "2"
members = [
    "crates/crispy-core",
    "crates/crispy-ffi",
    "crates/crispy-server",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "CC-BY-NC-SA-4.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
regex = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls-native-roots",
    "json",
    "gzip",
] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
strsim = "0.11"
url = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
tempfile = "3"
wiremock = "0.6"
mockall = "0.13"
insta = { version = "1", features = ["json", "yaml"] }
fake = { version = "5", features = ["derive"] }
proptest = "1"
moka = { version = "0.12", features = ["future", "sync"] }
quick-xml = "0.37"
singleflight-async = "0.2"
