[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "CC-BY-NC-SA-4.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace.lints.clippy]
# Correctness & safety
enum_glob_use          = "warn"
ptr_as_ptr             = "warn"
# Style & readability
cloned_instead_of_copied = "warn"
flat_map_option        = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns   = "warn"
unused_self            = "warn"
# Perf
implicit_clone         = "warn"
inefficient_to_string  = "warn"
# Note: unwrap_used/expect_used intentionally omitted — binary + FFI crates need them.
# Use `#[allow(clippy::unwrap_used)]` sparingly in library code.

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
regex = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls-native-roots",
    "json",
    "gzip",
] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
strsim = "0.11"
url = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
tempfile = "3"
wiremock = "0.6"
mockall = "0.13"
insta = { version = "1", features = ["json", "yaml"] }
fake = { version = "5", features = ["derive"] }
proptest = "1"
moka = { version = "0.12", features = ["future", "sync"] }
quick-xml = "0.37"
singleflight-async = "0.2"
unicode-normalization = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
compact_str = { version = "0.8", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
flate2 = "1"
xz2 = "0.1"
md-5 = "0.10"
memory-stats = "1.2"
crispy-catchup = { path = "../rust/shared/crispy-catchup", version = "0.1.2" }
crispy-iptv-tools = { path = "../rust/shared/crispy-iptv-tools", version = "0.1.2" }
crispy-iptv-types = { path = "../rust/shared/crispy-iptv-types", version = "0.1.2" }
crispy-m3u = { path = "../rust/shared/crispy-m3u", version = "0.1.2" }
crispy-media-probe = { path = "../rust/shared/crispy-media-probe", version = "0.1.2" }
crispy-stalker = { path = "../rust/shared/crispy-stalker", version = "0.1.2" }
crispy-stream-checker = { path = "../rust/shared/crispy-stream-checker", version = "0.1.2" }
crispy-xmltv = { path = "../rust/shared/crispy-xmltv", version = "0.1.2" }
crispy-xtream = { path = "../rust/shared/crispy-xtream", version = "0.1.2" }

[patch.crates-io]
crispy-catchup = { path = "../rust/shared/crispy-catchup" }
crispy-iptv-tools = { path = "../rust/shared/crispy-iptv-tools" }
crispy-iptv-types = { path = "../rust/shared/crispy-iptv-types" }
crispy-m3u = { path = "../rust/shared/crispy-m3u" }
crispy-media-probe = { path = "../rust/shared/crispy-media-probe" }
crispy-stalker = { path = "../rust/shared/crispy-stalker" }
crispy-stream-checker = { path = "../rust/shared/crispy-stream-checker" }
crispy-xmltv = { path = "../rust/shared/crispy-xmltv" }
crispy-xtream = { path = "../rust/shared/crispy-xtream" }
