[package]
name = "crispy-catchup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
