[package]
name = "crispy-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
percent-encoding.workspace = true
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
scraper = "0.25.0"
urlencoding = "2.1.3"
reqwest.workspace = true
anyhow.workspace = true
chrono-tz = "0.10"
dirs = "6.0.0"
semver = "1"
strsim = "0.11"
blurhash = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.49.0", features = ["full"] }
wiremock = "0.6"

[lints]
workspace = true
