[package]
name = "crispy-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
percent-encoding.workspace = true
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing.workspace = true
scraper = "0.25.0"
urlencoding = "2.1.3"
reqwest.workspace = true
anyhow.workspace = true
chrono-tz = "0.10"
dirs = "6.0.0"
semver = "1"
strsim.workspace = true
unicode-normalization = "0.1"
blurhash = "0.2"
aes-gcm.workspace = true
argon2.workspace = true
rand_core.workspace = true
subtle.workspace = true
zeroize.workspace = true
secrecy.workspace = true
url.workspace = true
keyring.workspace = true
fluent.workspace = true
fluent-bundle.workspace = true
fluent-syntax.workspace = true
unic-langid.workspace = true
moka.workspace = true
singleflight-async.workspace = true
quick-xml.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
] }

[dev-dependencies]
tempfile.workspace = true
tokio = { version = "1", features = ["full"] }
wiremock.workspace = true
mockall.workspace = true
insta.workspace = true
fake.workspace = true
proptest.workspace = true

[lints]
workspace = true
