[package]
name = "crispy-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
crispy-core = { path = "../crispy-core" }
serde.workspace = true
serde_json.workspace = true
flutter_rust_bridge.workspace = true
anyhow.workspace = true
chrono.workspace = true

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }
