[package]
name = "crispy-iptv-tools"
description = "IPTV playlist utilities: filter, merge, dedup, normalize"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
unicode-normalization = { workspace = true }

[lints]
workspace = true
