[package]
name = "crispy-iptv-types"
description = "Protocol-agnostic IPTV domain types and traits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
compact_str = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
