[package]
name = "crispy-m3u"
description = "High-performance M3U/M3U8 playlist parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
