[package]
name = "crispy-media-probe"
description = "ffprobe/ffmpeg stream analysis and screenshot capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "time"] }
tracing = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
