[package]
name = "crispy-player"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
crispy-core = { path = "../crispy-core" }
thiserror.workspace = true
tracing.workspace = true
libmpv = "2.0"
libmpv-sys = "3"
glow = "0.16"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls-native-roots"] }
zip = "2"
flate2 = "1"
tar = "0.4"

[lints]
workspace = true
