[package]
name = "crispy-player"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
crispy-core = { path = "../crispy-core" }
thiserror.workspace = true
tracing.workspace = true
libmpv-sys = "3"  # raw FFI only — bypasses version check for newer mpv DLLs
glow = "0.16"

[dev-dependencies]
mockall.workspace = true

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls-native-roots"] }
zip = "2"
flate2 = "1"
tar = "0.4"

[lints]
workspace = true
