[package]
name = "crispy-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crispy-server-standalone"
path = "src/bin/crispy-server-standalone.rs"

[dependencies]
crispy-core = { path = "../crispy-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
percent-encoding.workspace = true
base64.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
