[package]
name = "crispy-stalker"
description = "Async Stalker/MAG portal API client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"
rand = "0.8"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
