[package]
name = "crispy-stream-checker"
description = "Concurrent IPTV stream validator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
crispy-media-probe = { path = "../crispy-media-probe" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }

[lints]
workspace = true
