[package]
name = "crispy-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-server = { path = "../crispy-server" }
crispy-player = { path = "../crispy-player" }
slint.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rust-i18n.workspace = true

[build-dependencies]
slint-build.workspace = true

[lints]
workspace = true
