[package]
name = "crispy-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-core = { path = "../crispy-core" }
crispy-server = { path = "../crispy-server" }
crispy-player = { path = "../crispy-player" }
slint.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
rust-i18n.workspace = true
glow = "0.16"
libmpv-sys = "3.1.0"
reqwest.workspace = true
image.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "6"

[build-dependencies]
slint-build.workspace = true

[lints]
workspace = true
