[package]
name = "crispy-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-core = { path = "../crispy-core" }
crispy-server = { path = "../crispy-server" }
crispy-player = { path = "../crispy-player" }
slint.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
rust-i18n.workspace = true
glow = "0.16"
libmpv-sys = "3.1.0"
reqwest.workspace = true
image.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "6"
base64.workspace = true
thiserror.workspace = true
argon2.workspace = true

# WASM-only dependencies — compiled only when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Navigator",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
i-slint-backend-testing = "1.15"
mockall.workspace = true
insta.workspace = true

[build-dependencies]
slint-build.workspace = true

[lints]
workspace = true
