[package]
name = "crispy-xmltv"
description = "Streaming XMLTV/EPG parser for large files"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
