[package]
name = "crispy-xtream"
description = "Async Xtream Codes API client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crispy-iptv-types = { path = "../crispy-iptv-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
