[package]
name = "slint-crispy-vscroll"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["CrispyTivi Contributors"]
description = "Generic virtual scroll engine and scroll physics library for the Slint UI framework"
license = "LicenseRef-CrispyTivi-CC-BY-NC-SA-4.0"
readme = "README.md"
keywords = ["slint", "virtual-scroll", "lazy-list", "tv-ui", "scroll-physics"]
categories = ["gui", "rendering"]

[features]
default = []

# Input (7)
input-touch = []
input-mouse = []
input-trackpad = []
input-dpad = []
input-gamepad = []
input-keyboard = []
input-inject = []

# Physics (9)
momentum = []
friction = ["momentum"]
velocity-cap = ["momentum"]
snap-nearest = []
snap-start = []
snap-center = []
rubber-band = []
spring-physics = []
dpad-acceleration = ["input-dpad"]

# Layout (9)
vertical = []
horizontal = []
grid = ["vertical", "horizontal"]
size-uniform = []
size-variable = []
aspect-ratio = []
resize-reflow = []
resize-scale = []
resize-breakpoints = []

# Focus (4)
focus-tracking = ["input-dpad"]
focus-scroll-ahead = ["focus-tracking"]
focus-center-lock = ["focus-tracking"]
focus-page-jump = ["focus-tracking"]

# Z-Depth (8)
z-parallax = []
z-card-deck = []
z-cover-flow = ["z-card-deck"]
z-custom = []
z-preset-apple-tv = ["z-parallax"]
z-preset-netflix = []
z-preset-google-tv = []
z-preset-flat = []

# Slot Integrity (3)
integrity-sync = []
integrity-async-ack = []
integrity-double-buffer = []

# Animation (3)
anim-slint-transitions = []
anim-rust-tick = []
anim-hybrid = ["anim-slint-transitions", "anim-rust-tick"]

# Accessibility (2)
a11y-hooks = []
reduced-motion = []

# ECS (1)
ecs = []

# Diagnostics (2)
tracing = ["dep:tracing"]
profile = ["tracing"]

# Convenience bundles
tv-app = [
  "input-dpad", "input-inject",
  "momentum", "friction", "velocity-cap", "snap-start",
  "rubber-band", "spring-physics", "dpad-acceleration",
  "vertical", "horizontal", "grid",
  "size-uniform", "aspect-ratio",
  "resize-reflow", "resize-breakpoints",
  "focus-tracking", "focus-scroll-ahead", "focus-page-jump",
  "z-preset-google-tv", "z-preset-flat",
  "integrity-sync",
  "anim-hybrid",
  "a11y-hooks", "reduced-motion",
]

mobile-app = [
  "input-touch", "input-mouse", "input-keyboard", "input-inject",
  "momentum", "friction", "velocity-cap", "snap-nearest", "snap-start",
  "rubber-band", "spring-physics",
  "vertical", "horizontal", "grid",
  "size-uniform", "aspect-ratio",
  "resize-reflow", "resize-breakpoints",
  "focus-tracking", "focus-scroll-ahead",
  "z-preset-flat",
  "integrity-sync", "integrity-async-ack",
  "anim-hybrid",
  "a11y-hooks", "reduced-motion",
]

desktop-app = [
  "input-mouse", "input-trackpad", "input-keyboard", "input-dpad", "input-inject",
  "momentum", "friction", "velocity-cap", "snap-nearest", "snap-start",
  "rubber-band", "spring-physics", "dpad-acceleration",
  "vertical", "horizontal", "grid",
  "size-uniform", "size-variable", "aspect-ratio",
  "resize-reflow", "resize-scale", "resize-breakpoints",
  "focus-tracking", "focus-scroll-ahead",
  "z-preset-flat",
  "integrity-sync", "integrity-async-ack",
  "anim-hybrid",
  "a11y-hooks", "reduced-motion",
]

full = [
  "input-touch", "input-mouse", "input-trackpad", "input-dpad", "input-gamepad", "input-keyboard", "input-inject",
  "momentum", "friction", "velocity-cap", "snap-nearest", "snap-start", "snap-center",
  "rubber-band", "spring-physics", "dpad-acceleration",
  "vertical", "horizontal", "grid",
  "size-uniform", "size-variable", "aspect-ratio",
  "resize-reflow", "resize-scale", "resize-breakpoints",
  "focus-tracking", "focus-scroll-ahead", "focus-center-lock", "focus-page-jump",
  "z-parallax", "z-card-deck", "z-cover-flow", "z-custom",
  "z-preset-apple-tv", "z-preset-netflix", "z-preset-google-tv", "z-preset-flat",
  "integrity-sync", "integrity-async-ack", "integrity-double-buffer",
  "anim-hybrid",
  "a11y-hooks", "reduced-motion",
  "ecs",
  "tracing",
]

[dependencies]
slint = { workspace = true }
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Performance", "Window"] }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
i-slint-backend-testing = "1.15"
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "horizontal_carousel"
required-features = ["tv-app"]

[[example]]
name = "grid_epg"
required-features = ["tv-app"]

[[example]]
name = "nested_scroll"
required-features = ["tv-app", "ecs"]

[[example]]
name = "apple_tv_parallax"
required-features = ["z-cover-flow", "z-parallax", "input-dpad", "horizontal", "focus-tracking", "integrity-sync", "anim-hybrid"]

[[test]]
name = "physics_invariants"
path = "tests/proptest/physics_invariants.rs"
required-features = ["full"]

[[test]]
name = "layout_invariants"
path = "tests/proptest/layout_invariants.rs"
required-features = ["full"]

[[test]]
name = "slot_invariants"
path = "tests/proptest/slot_invariants.rs"
required-features = ["full"]

[[test]]
name = "focus_invariants"
path = "tests/proptest/focus_invariants.rs"
required-features = ["full"]

[[test]]
name = "edge_cases"
path = "tests/proptest/edge_cases.rs"
required-features = ["full"]

[[bench]]
name = "scroll_bench"
harness = false

[[bench]]
name = "physics_tick"
harness = false
required-features = ["full"]

[[bench]]
name = "layout_compute"
harness = false
required-features = ["full"]

[[bench]]
name = "slot_recycle"
harness = false
required-features = ["full"]
